--- a/Makefile.in
+++ b/Makefile.in
@@ -410,7 +410,7 @@ distclean-tags:
 
 #>- DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 #>+ 4
-KDE_DIST=Makefile.dist subdirs configure.in.in special.m4.in ed2k_hash.kdevses configure.files 
+KDE_DIST=build-stamp Makefile.dist subdirs configure.in.in special.m4.in ed2k_hash.kdevses configure.files 
 
 DISTFILES= $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST) $(KDE_DIST)
 
@@ -605,7 +605,6 @@ dist-hook:
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
-
 
 #>+ 2
 docs-am:
