MacOSX compilation issues, take 2

--- a/ed2k_hash/Makefile.in
+++ b/ed2k_hash/Makefile.in
@@ -233,7 +233,7 @@ ed2k_hash_LDADD =
 
 SUBDIRS = docs 
 
-EXTRA_DIST = main.c cl_ui.h cl_ui.c options.h options.c linkedlist.h linkedlist.c ui.h processfile.h processfile.c md4.h md4.c 
+EXTRA_DIST = main.c cl_ui.h cl_ui.c options.h options.c linkedlist.h linkedlist.c ui.h processfile.h processfile.c md4.h md4.c global.h 
 
 ####### kdevelop will overwrite this part!!! (end)############
 # set the include path found by configure
