--- a/Makefile.in
+++ b/Makefile.in
@@ -226,7 +226,7 @@ qt_libraries = @qt_libraries@
 x_includes = @x_includes@
 x_libraries = @x_libraries@
 
-SUBDIRS = ed2k_hash 
+SUBDIRS = ed2k_hash
 
 EXTRA_DIST = ed2k_hash.kdevprj admin AUTHORS COPYING ChangeLog INSTALL README TODO ed2k_hash.lsm 
 
@@ -410,7 +410,7 @@ distclean-tags:
 
 #>- DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 #>+ 4
-KDE_DIST=build-stamp Makefile.dist subdirs configure.in.in special.m4.in ed2k_hash.kdevses configure.files 
+KDE_DIST=subdirs special.m4.in configure.files ed2k_hash.kdevses Makefile.dist configure.in.in 
 
 DISTFILES= $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST) $(KDE_DIST)
 
