--- a/ed2k_hash/win32/win32main.rc
+++ b/ed2k_hash/win32/win32main.rc
@@ -67,7 +67,7 @@ STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 FONT 9, "MS Sans Serif"
 CAPTION "About " PACKAGE
 BEGIN
-   CTEXT PACKAGE " V" VERSION, -1, 3, 3, ABOUT_W - 6, 14
+   CTEXT PACKAGE " V" VERSION "e", -1, 3, 3, ABOUT_W - 6, 14
 
    GROUPBOX "Copying", -1, 0, 14, ABOUT_W, 118
 
