--- a/ed2k_hash/GUI/Makefile.win
+++ b/ed2k_hash/GUI/Makefile.win
@@ -7,9 +7,9 @@ WINDRES = windres.exe
 RES  = 
 OBJ  = MainWindow.o ui.o JobQueue.o Mutex.o Semaphore.o Thread.o Configuration.o Event.o ../linkedlist.o ../main.o ../md4.o ../options.o ../processfile.o gui.o About.o $(RES)
 LINKOBJ  = MainWindow.o ui.o JobQueue.o Mutex.o Semaphore.o Thread.o Configuration.o Event.o ../linkedlist.o ../main.o ../md4.o ../options.o ../processfile.o gui.o About.o $(RES)
-LIBS =  -L"C:/Dev-Cpp/lib" -mwindows -lfltk -lole32 -luuid -lcomctl32 -lwsock32 -lm 
-INCS =  -I"C:/Dev-Cpp/include"  -I".." 
-CXXINCS =  -I"C:/Dev-Cpp/include/c++"  -I"C:/Dev-Cpp/include/c++/mingw32"  -I"C:/Dev-Cpp/include/c++/backward"  -I"C:/Dev-Cpp/include"  -I".." 
+LIBS =  -L"C:/Dev-Cpp/lib" -L"C:/Developpement/fltk-1.1.3/lib" -mwindows -lfltk -lole32 -luuid -lcomctl32 -lwsock32 -lm 
+INCS =  -I"C:/Dev-Cpp/include"  -I".."  -I"C:/Developpement/fltk-1.1.3" 
+CXXINCS =  -I"C:/Dev-Cpp/include/c++"  -I"C:/Dev-Cpp/include/c++/mingw32"  -I"C:/Dev-Cpp/include/c++/backward"  -I"C:/Dev-Cpp/include"  -I".."  -I"C:/Developpement/fltk-1.1.3" 
 BIN  = ed2k_hash_gui.exe
 CXXFLAGS = $(CXXINCS)-D__WIN32 -DPROTOTYPES=1 -D_GUI   -fexpensive-optimizations -O3
 CFLAGS = $(INCS)-DWIN32 -mms-bitfields -DPROTOTYPES=1 -D_GUI   -fexpensive-optimizations -O3
