FLTK GUI builds on linux as well now if libraries and development headers are present.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 SUBDIRS = ed2k_hash
 
-EXTRA_DIST = AUTHORS COPYING ChangeLog INSTALL README TODO ed2k_hash.lsm 
+EXTRA_DIST = AUTHORS COPYING ChangeLog INSTALL README TODO 
 
 
