add debian/ dir to dist target; add build-depends to debian control file; update debian files

--- a/configure.ac
+++ b/configure.ac
@@ -62,6 +62,7 @@ dnl ===========================
 
 AC_OUTPUT([
 ./Makefile
+debian/Makefile
 ed2k_hash/Makefile
 ed2k_hash/docs/Makefile
 ed2k_hash/docs/en/Makefile
