--- a/debian/control
+++ b/debian/control
@@ -3,13 +3,14 @@ Section: utils
 Priority: optional
 Maintainer: Tim-Philipp Müller <t.i.m@orange.net>
 Standards-Version: 3.5.7.0
+Build-Depends: libfltk1.1-dev
 
 Package: ed2k-hash
 Architecture: i386
-Depends: libc6 (>= 2.2.5-6)
-Description: A command line tool that creates so-called 'ed2k-links' for
- a given number of specified files, optionally descending into 
- subdirectories ('ed2k-links' are file URIs for the file-sharing
- program eDonkey2000), and/or optionally wrapping html-links around the
- output.
+Depends: ${shlibs:Depends}
+Description: A command line tool and GUI to create so-called
+ 'ed2k-links' used by the eDonkey2000, Overnet, eMule, and
+ mldonkey file sharing programs. It can hash a given number
+ of specified files, optionally descending into subdirectories, 
+ and/or optionally wrapping html-links around the output.
  
